test/testdata/classes/methods/properties/setter_not_enough_params_error.lox
class Foo {
    get bar() {}

    // error: property setter must have a parameter
    set bar() {}
}

_ = Foo;
